--- a/README
+++ b/README
@@ -6,3 +6,5 @@ Levenshtein.cpp file has testNode() and testDict() functions for code profiling.
 
 To compile:
 g++ -g MyNode.cpp Levenshtein.cpp -lrt -o dict
+
+For more information please check this post: http://www.investuotojas.eu/2012/03/25/levenshtein-distance-in-c-and-code-profiling-in-r/
